--- a/src/news/templates/news/news_index_page.html
+++ b/src/news/templates/news/news_index_page.html
@@ -8,15 +8,17 @@
 
     {% for post in page.get_children %}
         <div class="container">
-            <div class="card mb-3">
-                <div class="card-body">
-                    <div class="row">
-                        <h6 class="col"><a href="{% pageurl post %}">{{ post.title }}</a></h6>
-                        <h6 class="col text-end" style="font-weight: normal">{{ page.author }}, {{ page.date }}</h6>
+            <a href="{% pageurl post %}" class="no-underline">
+                <div class="card mb-3 bg-hover fixed-height-card-200">
+                    <div class="card-body">
+                        <div class="row">
+                            <h6 class="col">{{ post.title }}</h6>
+                            <h6 class="col text-end" style="font-weight: normal">{{ page.author }}, {{ page.date }}</h6>
+                        </div>
+                        <p class="card-text">{{ post.specific.body|richtext }}</p>
                     </div>
-                    <p class="card-text">{{ post.specific.body|richtext }}</p>
                 </div>
-            </div>
+            </a>
         </div>
     {% endfor %}
 
