--- a/src/msl_pu_website/templates/base.html
+++ b/src/msl_pu_website/templates/base.html
@@ -27,7 +27,7 @@
         <link rel="stylesheet" type="text/css" href="{% static 'css/msl_pu_website.css' %}">
 
         {% block extra_css %}
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+        <link rel="stylesheet" type="text/css" href="{% static 'css/custom-bootstrap.css' %}">
         {% endblock %}
     </head>
 
