--- a/src/home/templates/home/home_page.html
+++ b/src/home/templates/home/home_page.html
@@ -6,18 +6,72 @@
 
 {% block content %}
 <div class="container">
+  <!-- Carousel - always on top for small devices -->
+  <div class="row mb-3 d-block d-lg-none">
+    <div class="col-12">
+      <div class="border-top border-bottom mb-3 py-1">
+        <div id="carouselExampleIndicatorsMobile" class="carousel slide">
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <img src="{% static 'images/msl_fotka.jpg' %}" class="d-block w-100" alt="...">
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
   <div class="row">
-    <div class="col-5">
+    <!-- Left column - Social links, actual round and news -->
+    <div class="col-lg-5">
+      <div class="card bg-gradient-primary shadow-sm mb-3">
+        <div class="card-body p-2">
+          <div class="row align-items-center">
+            <div class="col-2">
+              <div class="social-icons-vertical">
+                <a href="https://www.facebook.com/profile.php?id=100069756327143" target="_blank" class="mb-3 d-block">
+                    <i class="fab fa-facebook fa-2x" style="color: #1877F2;"></i>
+                </a>
+                <a href="https://www.instagram.com/msl_liga/" target="_blank" class="d-block">
+                    <i class="fab fa-instagram fa-2x" style="color: #E1306C;"></i>
+                </a>
+              </div>
+            </div>
+            {% get_rounds_page as rounds_page %}
+            <div class="col-4 border-start text-center">
+              <a href="{% if rounds_page %}{% pageurl rounds_page %}{% else %}#{% endif %}" title="Rozpis kol" class="d-block text-decoration-none">
+                <img src="{% static 'images/logo-hlavni.png' %}" class="img-fluid" style="max-height: 120px; object-fit: contain;" alt="Logo" />
+              </a>
+            </div>
+            <div class="col-6 border-start">
+              <a href="{% if rounds_page %}{% pageurl rounds_page %}{% else %}#{% endif %}" title="Rozpis kol" class="d-block text-decoration-none text-reset">
+                <p class="fw-bold mb-1">Následující kolo:</p>
+                {% if next_round %}
+                  <p class="mb-0">{{ next_round.round }} {{ next_round.format_date }}</p>
+                {% else %}
+                  <p class="mb-0">Momentálně není naplánováno</p>
+                {% endif %}
+              </a>
+            </div>
+          </div>
+        </div>
+      </div>
       {% wagtail_site as current_site %}
+      <div class="border-top mt-4 mb-2 pt-1 text-center">
+        <small class="text-muted">AKTUALITY</small>
+      </div>
       {% with current_site.root_page as root_page %}
         {% for post in root_page.get_children.first.get_children.all|slice:":3" %}
             <a href="{% pageurl post %}" class="no-underline">
-              <div class="card mb-3 bg-hover fixed-height-card-200">
-                <div class="card-body">
-                  <div class="row">
-                    <h6 class="col">{{ post.title }}</h6>
-                  </div>
-                  <p class="card-text">{{ post.specific.body|richtext }}</p>
+              <div class="card shadow-sm mb-3 bg-hover fixed-height-card">
+                <div class="card-header bg-gradient-primary py-3">
+                    <div class="row">
+                        <h5 class="col card-title mb-0">{{ post.title }}</h5>
+                        <small class="col text-end fst-italic">{{ post.specific.date }}</small>
+                    </div>
+                </div>
+                <div class="card-body card-body-with-fade">
+                  {{ post.specific.body|richtext }}
                 </div>
               </div>
             </a>
@@ -25,60 +79,34 @@
       {% endwith %}
       {% get_news as news %}
       {% if news %}
-        <a href="{% pageurl news %}" class="no-underline">
-          <div class="card mb-3 bg-hover">
-            <p class="card-text text-center"><span>&#8943;</span></p>
-          </div>
-        </a>
+        <div class="border-bottom mb-4">
+          <a href="{% pageurl news %}" class="no-underline">
+            <div class="card shadow-sm mb-3 bg-hover">
+              <p class="card-text text-center"><span>&#8943;</span></p>
+            </div>
+          </a>
+        </div>
       {% endif %}
     </div>
-    <div class="col-7">
-      <div class="card mb-3">
-        <div class="card-body">
-          <div class="row align-items-center">
-            <div class="col-auto">
-              <ul class="nav nav-tabs">
-                <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" href="#">Muži</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="#">Ženy</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="#">35+</a>
-                </li>
-              </ul>
-            </div>
-            <div class="col-auto ms-auto">
-              <select class="form-select" aria-label="Default select example">
-                <option selected value="1">2025</option>
-                <option value="2">2024</option>
-                <option value="3">2023</option>
-              </select>
+
+    <!-- Right column - Carousel (on large screens) and standings -->
+    <div class="col-lg-7">
+      <!-- Carousel - visible only on large screens -->
+      <div class="border-top border-bottom mb-3 py-1 d-none d-lg-block">
+        <div id="carouselExampleIndicators" class="carousel slide">
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <img src="{% static 'images/msl_fotka.jpg' %}" class="d-block w-100" alt="...">
             </div>
           </div>
-          <table class="table table-sm table-hover">
-            <thead>
-              <tr>
-                <th scope="col">#</th>
-                <th scope="col">Tým</th>
-                <th scope="col">Body</th>
-              </tr>
-            </thead>
-            <tbody>
-              {% for team in teams %}
-              <tr>
-                <th scope="row">{{ forloop.counter }}</th>
-                <td>{{ team.name }}</td>
-                <td>{% random_1_to_300 %}</td>
-              </tr>
-              {% endfor %}
-            </tbody>
-          </table>
         </div>
+      </div>
+
+      <!-- Enrollments -->
+      <div id="enrollments">
+        {% show_enrollments %}
       </div>
     </div>
   </div>
 </div>
-
 {% endblock content %}
