--- a/src/msl_about/templates/msl_about/about_msl_page.html
+++ b/src/msl_about/templates/msl_about/about_msl_page.html
@@ -8,10 +8,10 @@
 
 <div class="container">
     <div class="card mb-3">
+        <div class="card-header bg-gradient-primary py-3">
+            <h5 class="card-title mb-0">{{ page.title }}</h5>
+        </div>
         <div class="card-body">
-            <div class="row">
-                <h6 class="col">{{ page.title }}</h6>
-            </div>
             <p class="card-text">{{ page.body|richtext }}</p>
         </div>
     </div>
