--- a/src/msl_about/templates/msl_about/rounds_page.html
+++ b/src/msl_about/templates/msl_about/rounds_page.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% load wagtailcore_tags %}
+{% load wagtailcore_tags navigation_tags %}
 
 {% block body_class %}template-aboutmslrounds{% endblock %}
 
@@ -8,11 +8,59 @@
 
 <div class="container">
     <div class="card mb-3">
-        <div class="card-body">
-            <div class="row">
-                <h6 class="col">{{ page.title }}</h6>
+        <div class="card-header bg-gradient-primary py-3">
+            <h5 class="card-title mb-0">{{ page.title }}</h5>
+        </div>
+
+        <!-- Form section outside of card-body -->
+        <div class="bg-light py-2 border-bottom d-flex justify-content-end">
+            <div class="pe-3">
+                <form method="get" action="" class="d-flex align-items-center">
+                    <label for="season_year" class="form-label me-2 mb-0 small text-muted">Sezóna:</label>
+                    <select class="form-select" id="season_year" name="season_year" onchange="this.form.submit()" aria-label="Select year">
+                    {% get_season_rounds_years as season_years %}
+                    {% for year in season_years %}
+                        <option value="{{ year }}" {% if request.GET.season_year == year|stringformat:"s" %}selected{% endif %}>{{ year }}</option>
+                    {% endfor %}
+                    </select>
+                </form>
             </div>
-            <p class="card-text">{{ page.body|richtext }}</p>
+        </div>
+
+        <div class="card-body">
+            <div class="d-flex justify-content-center pb-2">
+                <div class="table-responsive">
+                    <table class="table table-sm table-hover w-auto mx-auto">
+                        <thead>
+                        <tr>
+                            <th scope="col" class="px-3">#</th>
+                            <th scope="col" class="px-3">Kolo</th>
+                            <th scope="col" class="px-3">Datum konání</th>
+                            <th scope="col" class="px-3">Datum registrace</th>
+                            <th scope="col" class="px-3">Kategorie</th>
+                            <th scope="col" class="px-3">Výsledky uveřejněny</th>
+                        </tr>
+                        </thead>
+                        <tbody>
+                        {% for round in season_rounds_filtered %}
+                        <tr>
+                            <td class="px-3">{{ forloop.counter }}.</td>
+                            <td class="px-3">{{round.round}}</td>
+                            <td class="px-3">{{ round.datetime|date:"d.m. H:i" }}</td>
+                            <td class="px-3">{{ round.date_registration|date:"d.m." }}</td>
+                            <td class="px-3">{{ round.categories }}</td>
+                            <td class="px-3">
+                                {% if round.results_ready %}
+                                    <i class="fas fa-check-circle text-success"></i>
+                                {% else %}
+                                    <i class="fas fa-times-circle text-danger"></i>
+                                {% endif %}
+                        </tr>
+                        {% endfor %}
+                        </tbody>
+                    </table>
+                </div>
+            </div>
         </div>
     </div>
 </div>
