--- a/src/util/templates/util/gdpr_page.html
+++ b/src/util/templates/util/gdpr_page.html
@@ -2,18 +2,21 @@
 
 {% load wagtailcore_tags %}
 
-{% block body_class %}template-newspage{% endblock %}
+{% block body_class %}template-mslenroll{% endblock %}
 
 {% block content %}
+
 <div class="container">
     <div class="card mb-3">
-        <div class="card-body">
+        <div class="card-header bg-gradient-primary py-3">
             <div class="row">
-                <h6 class="col">{{ page.title }}</h6>
-                <h6 class="col text-end" style="font-weight: normal">{{ page.author }}, {{ page.date }}</h6>
+                <h5 class="col card-title mb-0">{{ page.title }}</h5>
             </div>
+        </div>
+        <div class="card-body">
             <p class="card-text">{{ page.body|richtext }}</p>
         </div>
     </div>
 </div>
+
 {% endblock %}
