feat: results model and page

--- a/src/home/templates/home/home_page.html
+++ b/src/home/templates/home/home_page.html
@@ -103,8 +103,8 @@
       </div>
 
       <!-- Enrollments -->
-      <div id="enrollments">
-        {% show_enrollments %}
+      <div id="results">
+        {% show_results %}
       </div>
     </div>
   </div>
