--- a/src/msl_about/templates/msl_about/enrollments_page.html
+++ b/src/msl_about/templates/msl_about/enrollments_page.html
@@ -6,6 +6,20 @@
         <h5 class="card-title mb-0">{{ enrollments_page.title }}</h5>
     </div>
 
+    <div class="bg-light py-2 border-bottom d-flex justify-content-end">
+        <div class="pe-3">
+            <form method="get" action="" class="d-flex align-items-center">
+                <label for="category" class="form-label me-2 mb-0 small text-muted">Kategorie:</label>
+                <select class="form-select" id="category" name="category" onchange="this.form.submit()" aria-label="Select category">
+                {% get_categories as categories %}
+                {% for category_value, category_label in categories %}
+                    <option value="{{ category_value }}" {% if request.GET.category == category_value %} selected {% endif %}>{{ category_label }}</option>
+                {% endfor %}
+                </select>
+            </form>
+        </div>
+    </div>
+
     <div class="card-body">
         <div class="d-flex justify-content-center pb-2">
             <div class="table-responsive">
@@ -38,6 +52,7 @@
                             {% else %}
                                 <i class="fas fa-times-circle text-danger"></i>
                             {% endif %}
+                        </td>
                     </tr>
                     {% endfor %}
                     </tbody>
