--- a/src/msl_about/templates/msl_about/rounds_page.html
+++ b/src/msl_about/templates/msl_about/rounds_page.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% load wagtailcore_tags navigation_tags %}
+{% load wagtailcore_tags navigation_tags util_tags %}
 
 {% block body_class %}template-aboutmslrounds{% endblock %}
 
