--- a/src/msl_pu_website/templates/includes/footer.html
+++ b/src/msl_pu_website/templates/includes/footer.html
@@ -1,4 +1,4 @@
-{% load static navigation_tags %}
+{% load static navigation_tags util_tags %}
 
 <!-- Mobile footer (visible only on small screens) TODO - eg. on 4k res does not work well!!! -->
 <footer>
