--- a/src/msl_about/templates/msl_about/enrollments_page.html
+++ b/src/msl_about/templates/msl_about/enrollments_page.html
@@ -1,4 +1,4 @@
-{% load wagtailcore_tags navigation_tags %}
+{% load wagtailcore_tags navigation_tags util_tags %}
 
 {% block content %}
 <div class="card mb-3">
