--- a/src/msl_about/templates/msl_about/points_and_finances_page.html
+++ b/src/msl_about/templates/msl_about/points_and_finances_page.html
@@ -84,7 +84,7 @@
                 </div>
                 
                 <!-- 35+ table -->
-                <div class="col-12 col-md-4">
+                <div class="col-12 col-md-4 mb-4 mb-md-0">
                     <h2 class="card-title mb-3 text-center">35+</h2>
                     <div class="d-flex justify-content-center">
                         <div class="table-responsive">
