fix: minor styling fixes, add notes

--- a/src/msl_pu_website/templates/includes/header.html
+++ b/src/msl_pu_website/templates/includes/header.html
@@ -36,13 +36,10 @@
         </li>
       {% endif %}
     {% endfor %}
-    <li class="nav-item">
-      <a class="nav-link disabled">Tipování</a>
-    </li>
-    <li class="nav-item">
+    <li class="nav-item bg-hover">
       <a class="nav-link" href="http://old.msliga.info/phpBB3/index.php" target="_blank" rel="noopener noreferrer">Diskuze</a>
     </li>
-    <li class="nav-item">
+    <li class="nav-item bg-hover">
       <a class="nav-link" href="http://old.msliga.info/" target="_blank" rel="noopener noreferrer">Starý web</a>
     </li>
   </ul>
