--- a/src/home/templates/home/home_page.html
+++ b/src/home/templates/home/home_page.html
@@ -24,7 +24,7 @@
   <div class="row">
     <!-- Left column - Social links, actual round and news -->
     <div class="col-lg-5">
-      <div class="card bg-gradient-primary shadow-sm mb-3">
+      <div class="card bg-gradient-primary bg-hover shadow-sm mb-3">
         <div class="card-body p-2">
           <div class="row align-items-center">
             <div class="col-2">
@@ -60,8 +60,9 @@
       <div class="border-top mt-4 mb-2 pt-1 text-center">
         <small class="text-muted">AKTUALITY</small>
       </div>
+      {% get_news as news_index_page %}
       {% with current_site.root_page as root_page %}
-        {% for post in root_page.get_children.first.get_children.all|slice:":3" %}
+        {% for post in news_index_page.get_children.all.reverse|slice:":3" %}
             <a href="{% pageurl post %}" class="no-underline">
               <div class="card shadow-sm mb-3 bg-hover fixed-height-card">
                 <div class="card-header bg-gradient-primary py-3">
@@ -77,10 +78,9 @@
             </a>
         {% endfor %}
       {% endwith %}
-      {% get_news as news %}
       {% if news %}
         <div class="border-bottom mb-4">
-          <a href="{% pageurl news %}" class="no-underline">
+          <a href="{% pageurl news_index_page %}" class="no-underline">
             <div class="card shadow-sm mb-3 bg-hover">
               <p class="card-text text-center"><span>&#8943;</span></p>
             </div>
