--- a/src/msl_about/templates/msl_about/enrollments_page.html
+++ b/src/msl_about/templates/msl_about/enrollments_page.html
@@ -2,62 +2,64 @@
 {% load wagtailcore_tags navigation_tags util_tags %}
 
 {% block content %}
-<div class="card mb-3">
-    <div class="card-header bg-gradient-primary py-3">
-        <h5 class="card-title mb-0">{{ enrollments_page.title }}</h5>
-    </div>
-
-    <div class="bg-light py-2 border-bottom d-flex justify-content-end">
-        <div class="pe-3">
-            <form method="get" action="" class="d-flex align-items-center">
-                <label for="category" class="form-label me-2 mb-0 small text-muted">Kategorie:</label>
-                <select class="form-select" id="category" name="category" onchange="this.form.submit()" aria-label="Select category">
-                {% get_categories as categories %}
-                {% for category_value, category_label in categories %}
-                    <option value="{{ category_value }}" {% if request.GET.category == category_value %} selected {% endif %}>{{ category_label }}</option>
-                {% endfor %}
-                </select>
-            </form>
+<div class="container">
+    <div class="card shadow-sm mb-3">
+        <div class="card-header bg-gradient-primary py-3">
+            <h5 class="card-title mb-0">{{ page.title }}</h5>
         </div>
-    </div>
 
-    <div class="card-body">
-        <div class="d-flex justify-content-center pb-2">
-            <div class="table-responsive">
-                <table class="table table-sm table-hover w-auto mx-auto">
-                    <thead>
-                    <tr>
-                        <th scope="col" class="px-3">Tým</th>
-                        <th scope="col" class="px-3">Zástupce</th>
-                        <th scope="col" class="px-3">Datum registrace</th>
-                        <th scope="col" class="px-3">Schváleno</th>
-                        <th scope="col" class="px-3">Zaplaceno</th>
-                    </tr>
-                    </thead>
-                    <tbody>
-                    {% for enrollment in enrollments_filtered %}
-                    <tr>
-                        <td class="px-3">{{ enrollment.team }}</td>
-                        <td class="px-3">{{ enrollment.team_representative }}</td>
-                        <td class="px-3">{{ enrollment.date_registration|date:"d.m." }}</td>
-                        <td class="px-3">
-                            {% if enrollment.reg_confirmed %}
-                                <i class="fas fa-check-circle text-success"></i>
-                            {% else %}
-                                <i class="fas fa-times-circle text-danger"></i>
-                            {% endif %}
-                        </td>
-                        <td class="px-3">
-                            {% if enrollment.paid %}
-                                <i class="fas fa-check-circle text-success"></i>
-                            {% else %}
-                                <i class="fas fa-times-circle text-danger"></i>
-                            {% endif %}
-                        </td>
-                    </tr>
+        <div class="bg-light py-2 border-bottom d-flex justify-content-end">
+            <div class="pe-3">
+                <form method="get" action="" class="d-flex align-items-center">
+                    <label for="category" class="form-label me-2 mb-0 small text-muted">Kategorie:</label>
+                    <select class="form-select" id="category" name="category" onchange="this.form.submit()" aria-label="Select category">
+                    {% get_categories as categories %}
+                    {% for category_value, category_label in categories %}
+                        <option value="{{ category_value }}" {% if request.GET.category == category_value %} selected {% endif %}>{{ category_label }}</option>
                     {% endfor %}
-                    </tbody>
-                </table>
+                    </select>
+                </form>
+            </div>
+        </div>
+
+        <div class="card-body">
+            <div class="d-flex justify-content-center pb-2">
+                <div class="table-responsive">
+                    <table class="table table-sm table-hover w-auto mx-auto">
+                        <thead>
+                        <tr>
+                            <th scope="col" class="px-3">Tým</th>
+                            <th scope="col" class="px-3">Zástupce</th>
+                            <th scope="col" class="px-3">Datum registrace</th>
+                            <th scope="col" class="px-3">Schváleno</th>
+                            <th scope="col" class="px-3">Zaplaceno</th>
+                        </tr>
+                        </thead>
+                        <tbody>
+                        {% for enrollment in enrollments_filtered %}
+                        <tr>
+                            <td class="px-3">{{ enrollment.team }}</td>
+                            <td class="px-3">{{ enrollment.team_representative }}</td>
+                            <td class="px-3">{{ enrollment.date_registration|date:"d.m." }}</td>
+                            <td class="px-3">
+                                {% if enrollment.reg_confirmed %}
+                                    <i class="fas fa-check-circle text-success"></i>
+                                {% else %}
+                                    <i class="fas fa-times-circle text-danger"></i>
+                                {% endif %}
+                            </td>
+                            <td class="px-3">
+                                {% if enrollment.paid %}
+                                    <i class="fas fa-check-circle text-success"></i>
+                                {% else %}
+                                    <i class="fas fa-times-circle text-danger"></i>
+                                {% endif %}
+                            </td>
+                        </tr>
+                        {% endfor %}
+                        </tbody>
+                    </table>
+                </div>
             </div>
         </div>
     </div>
