--- a/src/msl_news/templates/msl_news/news_index_page.html
+++ b/src/msl_news/templates/msl_news/news_index_page.html
@@ -6,7 +6,7 @@
 
 {% block content %}
 
-    {% for post in page.get_children %}
+    {% for post in page.get_children.reverse %}
         <div class="container">
             <a href="{% pageurl post %}" class="no-underline">
                 <div class="card shadow-sm mb-3 bg-hover fixed-height-card">
