--- a/src/msl_results/templates/msl_results/results_page.html
+++ b/src/msl_results/templates/msl_results/results_page.html
@@ -3,7 +3,7 @@
 
 {% block content %}
 <div class="container">
-    <div class="card mb-3">
+    <div class="card shadow-sm mb-3">
         <div class="card-header bg-gradient-primary py-3">
             <h5 class="card-title mb-0">{{ page.title }}</h5>
         </div>
